--- a/ansible/roles/mysql/mandala/tasks/main.yml
+++ b/ansible/roles/mysql/mandala/tasks/main.yml
@@ -1,8 +1,8 @@
-- name: create shangrila database
-  mysql_db: db=anime_admin_development encoding=utf8mb4 state=present 
+- name: create mandala database
+  mysql_db: db=mandala encoding=utf8mb4 state=present 
   tags:
     - mysql
-    - anime_admin_development
+    - mandala
 
 - name: create mysql user
   mysql_user: name={{ item.name }} password={{ item.pass }} host={{ item.host }} priv=*.*:ALL,GRANT state=present
@@ -12,4 +12,4 @@
     - {name: "admin", pass: "{{ mysql_admin_password }}", host: "127.0.0.1"}
   tags:
     - mysql
-    - anime_admin_development
+    - mandala
