--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,39 +1,4 @@
-- name: CentOSへのミドルウェアインストール
-  hosts: centos
-  become: yes
-  gather_facts: no
-  roles:
-    - common
-    - sbt
-
-- name: install CI server
-  hosts: ciservers
-  become: yes
-  roles:
-    - jenkins
-    - flyway
-
-- name: install MySQL and configure the databases
-  hosts: dbservers
-  become: yes
-  roles:
-    - mysql
-    - mysql/anime_admin_development
-
-- name: deploy ShangriLa DDL/DML
-  hosts: ciservers
-  become: no
-  roles:
-    - shangrila
-
-- name: deploy sora
-  hosts: sora
-  become: no
-  roles:
-    - sora
-
-- name: setup rails server
-  hosts: railsservers
-  become: no
-  roles:
-    - ruby
+- include: dbservers.yml
+- include: ciservers.yml
+- include: master-api.yml
+- include: railsservers.yml
