Twitter解析関連のリポジトリのロールを追加

--- a/ansible/local.yml
+++ b/ansible/local.yml
@@ -13,6 +13,9 @@
   hosts: local
   become: no
   roles:
+    - ruby
     - mandala/db
     - mandala/master-api
-    - ruby
+    - mandala/analyze-twitter
+    - mandala/tsubuyaki
+    - mandala/scripts
