ミドルウェア関連のロールを追加

--- a/ansible/local.yml
+++ b/ansible/local.yml
@@ -6,6 +6,9 @@
     - sbt
     - jenkins
     - flyway
+    - fabric
+    - nginx
+    - nginx/mandala/master-api
     - mysql
     - mysql/mandala
 
