--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -25,8 +25,8 @@
 - name: delete default conf
   file: path={{ item }} state=absent
   with_items:
-    - {{ nginx_conf_dir }}/default.conf
-    - {{ nginx_conf_dir }}/example_ssl.conf 
+    - "{{ nginx_conf_dir }}/default.conf"
+    - "{{ nginx_conf_dir }}/example_ssl.conf"
   tags: nginx
   notify: restart nginx
 
