--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -9,8 +9,11 @@ application_dir: /home/vagrant/repositories
 git_version: 2.10.0
 java_version: 1.8.0
 ant_version: 1.9.7
+gradle_version: 3.1
 flyway_version: 4.0.3
 ruby_version: 2.3.1
+activator_version: 1.3.10
+activator_sha256sum: 43693f041c8422ee06a2a90a805fd7b0e258dc85da31f0a4dca340dfd119b4ce
 
 # MySQL
 mysql_log_dir: /var/log/mysql
