--- a/ansible/roles/common/tasks/java.yml
+++ b/ansible/roles/common/tasks/java.yml
@@ -1,3 +1,6 @@
 - name: java install
   yum: pkg=java-{{ java_version }}-openjdk state=latest
-  tags: common
+  tags:
+    - common
+    - java
+    - install
