--- a/ansible/roles/sbt/tasks/main.yml
+++ b/ansible/roles/sbt/tasks/main.yml
@@ -1,6 +1,8 @@
 - name: download
   get_url: url=https://bintray.com/sbt/rpm/rpm dest={{ src_dir }}/
-  tags: sbt
+  tags:
+    - sbt
+    - download
 
 - name: add yum.repos.d
   copy: src={{ src_dir }}/bintray--sbt-rpm.repo dest=/etc/yum.repos.d/bintray-sbt-rpm.repo force=no
@@ -8,4 +10,6 @@
 
 - name: install
   yum: name=sbt state=present
-  tags: sbt
+  tags:
+    - sbt
+    - install
