デーモン化用設定を追加

--- a/ansible/roles/mandala/analyze-twitter/tasks/main.yml
+++ b/ansible/roles/mandala/analyze-twitter/tasks/main.yml
@@ -3,3 +3,10 @@
   tags:
     - mandala
     - analyze-twitter
+
+- name: register to /etc/systemd/system
+  template: src=mandala-analyze-twitter.service dest=/etc/systemd/system/mandala-analyze-twitter.service
+  tags:
+    - mandala
+    - analyze-twitter
+  when: stage == "production"
