--- a/ansible/roles/nginx/mandala/master-api/tasks/main.yml
+++ b/ansible/roles/nginx/mandala/master-api/tasks/main.yml
@@ -8,7 +8,7 @@
   notify: restart nginx
 
 - name: create nginx log file directory
-  file: path=/var/log/nginx/mandala-master-api state=directory owner=nginx group=nginx mode=0644
+  file: path={{ nginx_log_dir }}/mandala-master-api state=directory owner=nginx group=nginx mode=0644
   tags:
     - nginx
     - mandala
